--- a/todo.txt
+++ b/todo.txt
@@ -3,3 +3,4 @@
 [] Поправить снипеты (На пропсы и RFC)
 [] Добавить SyncPromise
 [] Добавить SyncPromise в KVStorage, вместо Promise<T> -> Promise<T> | SyncPromise<T>
+[] Подобрать цвет иконки https://icons8.com/icons/set/sheets
