[FEAT] Add not found page

--- a/public/locales/ru/home.json
+++ b/public/locales/ru/home.json
@@ -1,10 +1,10 @@
 {
-  "Домашняя страница": "Home",
-  "Таблицы": "Sheets",
-  "Лендинг": "Landing",
-  "Сменить тему": "Change theme",
-  "Сменить язык": "Change language",
-  "Пользователь": "User",
-  "Меню": "Menu",
-  "На главную": "Go home"
+  "Домашняя страница": "Домашняя страница",
+  "Таблицы": "Таблицы",
+  "Лендинг": "Лендинг",
+  "Сменить тему": "Сменить тему",
+  "Сменить язык": "Сменить язык",
+  "Пользователь": "Пользователь",
+  "Меню": "Меню",
+  "На главную": "На главную"
 }
