--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -1,10 +1,10 @@
 {
-  "Домашняя страница": "Домашняя страница",
-  "Таблицы": "Таблицы",
-  "Лендинг": "Лендинг",
-  "Сменить тему": "Сменить тему",
-  "Сменить язык": "Сменить язык",
-  "Пользователь": "Пользователь",
-  "Меню": "Меню",
-  "На главную": "На главную"
+  "Домашняя страница": "Home",
+  "Таблицы": "Sheets",
+  "Лендинг": "Landing",
+  "Сменить тему": "Change theme",
+  "Сменить язык": "Change language",
+  "Пользователь": "User",
+  "Меню": "Menu",
+  "На главную": "Go home"
 }
