[FEAT] Add ErrorBoundary

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,6 @@
 {
   "Загрузка...": "Download...",
-  "Страница не найдена": "Page not found"
+  "Страница не найдена": "Page not found",
+  "Что-то сломалось!": "Something broke!",
+  "Перезагрузить страницу": "Reload page"
 }
