--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,6 @@
 {
   "Загрузка...": "Загрузка...",
-  "Страница не найдена": "Страница не найдена"
+  "Страница не найдена": "Страница не найдена",
+  "Что-то сломалось!": "Что-то сломалось!",
+  "Перезагрузить страницу": "Перезагрузить страницу"
 }
