--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,5 +2,16 @@
   "Загрузка...": "Загрузка...",
   "Страница не найдена": "Страница не найдена",
   "Что-то сломалось!": "Что-то сломалось!",
-  "Перезагрузить страницу": "Перезагрузить страницу"
+  "Перезагрузить страницу": "Перезагрузить страницу",
+  "Вход в систему": "Вход в систему",
+  "Войти": "Войти",
+  "Почта": "Почта",
+  "Пароль": "Пароль",
+  "Некорректная почта": "Некорректная почта",
+  "Поле не может быть пустым": "Поле не может быть пустым",
+  "Имя должно быть больше 3 символов": "Имя должно быть больше 3 символов",
+  "Имя должно быть меньше 14 символов": "Имя должно быть меньше 14 символов",
+  "Пароль должен быть больше 8 символов": "Пароль должен быть больше 8 символов",
+  "Пароль должен быть меньше 12 символов": "Пароль должен быть меньше 12 символов"
+
 }
