[FEAT] Add user, add auth features

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,10 +4,13 @@
   "Что-то сломалось!": "Something broke!",
   "Перезагрузить страницу": "Reload page",
   "Вход в систему": "Login",
+  "Регистрация": "Register",
   "Войти": "Login",
   "Почта": "Email",
   "Пароль": "Password",
+  "Повторите пароль": "Repeat password",
   "Некорректная почта": "Incorrect mail",
+  "Пароли не совпадают": "Password mismatch",
   "Поле не может быть пустым": "Field cannot be empty",
   "Имя должно быть больше 3 символов": "Name must be more than 3 characters",
   "Имя должно быть меньше 14 символов": "Name must be less than 14 characters",
