--- a/todo.txt
+++ b/todo.txt
@@ -5,3 +5,4 @@
 [] Добавить SyncPromise в KVStorage, вместо Promise<T> -> Promise<T> | SyncPromise<T>
 [] Подобрать цвет иконки https://icons8.com/icons/set/sheets
 [] Пофиксить Title
+[] Пофиксить AuthModal
