[FEAT] Add login

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,11 +1,12 @@
 {
-  "Загрузка...": "Загрузка...",
+  "Загрузка": "Загрузка",
   "Страница не найдена": "Страница не найдена",
   "Что-то сломалось!": "Что-то сломалось!",
   "Перезагрузить страницу": "Перезагрузить страницу",
   "Вход в систему": "Вход в систему",
   "Регистрация": "Регистрация",
   "Войти": "Войти",
+  "Выйти": "Выйти",
   "Почта": "Почта",
   "Пароль": "Пароль",
   "Повторите пароль": "Повторите пароль",
@@ -15,5 +16,6 @@
   "Имя должно быть больше 3 символов": "Имя должно быть больше 3 символов",
   "Имя должно быть меньше 14 символов": "Имя должно быть меньше 14 символов",
   "Пароль должен быть больше 8 символов": "Пароль должен быть больше 8 символов",
-  "Пароль должен быть меньше 12 символов": "Пароль должен быть меньше 12 символов"
+  "Пароль должен быть меньше 12 символов": "Пароль должен быть меньше 12 символов",
+  "Неверная почта или пароль": "Неверная почта или пароль"
 }
