--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,11 +1,12 @@
 {
-  "Загрузка...": "Download...",
+  "Загрузка": "Download",
   "Страница не найдена": "Page not found",
   "Что-то сломалось!": "Something broke!",
   "Перезагрузить страницу": "Reload page",
   "Вход в систему": "Login",
   "Регистрация": "Register",
   "Войти": "Login",
+  "Выйти": "Logout",
   "Почта": "Email",
   "Пароль": "Password",
   "Повторите пароль": "Repeat password",
@@ -15,5 +16,6 @@
   "Имя должно быть больше 3 символов": "Name must be more than 3 characters",
   "Имя должно быть меньше 14 символов": "Name must be less than 14 characters",
   "Пароль должен быть больше 8 символов": "Password must be more than 8 characters",
-  "Пароль должен быть меньше 12 символов": "Password must be less than 12 characters"
+  "Пароль должен быть меньше 12 символов": "Password must be less than 12 characters",
+  "Неверная почта или пароль": "Invalid mail or password"
 }
