[FIX] Fix tests

--- a/todo.txt
+++ b/todo.txt
@@ -7,3 +7,4 @@
 [] Пофиксить Title
 [] Допилить paths
 []? Сделать анимацию перехода между login и register
+[] Тесты асинхронных компонентов (AuthModal)
