[FEAT] Add memo for components

--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -2,6 +2,7 @@
   "Домашняя страница": "Home",
   "Таблицы": "Sheets",
   "Лендинг": "Landing",
+  "Профиль": "Profile",
   "Сменить тему": "Change theme",
   "Сменить язык": "Change language",
   "Пользователь": "User",
