--- a/public/locales/ru/home.json
+++ b/public/locales/ru/home.json
@@ -2,6 +2,7 @@
   "Домашняя страница": "Домашняя страница",
   "Таблицы": "Таблицы",
   "Лендинг": "Лендинг",
+  "Профиль": "Профиль",
   "Сменить тему": "Сменить тему",
   "Сменить язык": "Сменить язык",
   "Пользователь": "Пользователь",
