[FEAT] Add dropdown, menu, item, screenshots, stories

--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -4,7 +4,16 @@
   "Лендинг": "Landing",
   "Профиль": "Profile",
   "Сменить тему": "Change theme",
+  "Тема": "Theme",
+  "Настройки": "Settings",
+  "Темная": "Dark",
+  "Светлая": "Light",
+  "Токсичная": "Toxic",
   "Сменить язык": "Change language",
+  "Язык": "Language",
+  "Русский": "Russian",
+  "Английский": "English",
+  "Французский": "French",
   "Пользователь": "User",
   "Меню": "Menu",
   "На главную": "Go home"
