--- a/public/locales/ru/home.json
+++ b/public/locales/ru/home.json
@@ -4,7 +4,16 @@
   "Лендинг": "Лендинг",
   "Профиль": "Профиль",
   "Сменить тему": "Сменить тему",
+  "Тема": "Тема",
+  "Настройки": "Настройки",
+  "Темная": "Темная",
+  "Светлая": "Светлая",
+  "Токсичная": "Токсичная",
   "Сменить язык": "Сменить язык",
+  "Язык": "Язык",
+  "Русский": "Русский",
+  "Английский": "Английский",
+  "Французский": "Французский",
   "Пользователь": "Пользователь",
   "Меню": "Меню",
   "На главную": "На главную"
