--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -23,5 +23,20 @@
   "Фамилия должна быть больше 3 символов": "Фамилия должна быть больше 3 символов",
   "Фамилия должна быть меньше 18 символов": "Фамилия должна быть меньше 18 символов",
   "Никнейм должен быть больше 3 символов": "Никнейм должен быть больше 3 символов",
-  "Никнейм должен быть меньше 14 символов": "Никнейм должен быть меньше 14 символов"
+  "Никнейм должен быть меньше 14 символов": "Никнейм должен быть меньше 14 символов",
+  "Россия": "Россия",
+  "Украина": "Украина",
+  "Беларусь": "Беларусь",
+  "Германия": "Германия",
+  "Франция": "Франция",
+  "Москва": "Москва",
+  "Нижний Новгород": "Нижний Новгород",
+  "Минск": "Минск",
+  "Киев": "Киев",
+  "Берлин": "Берлин",
+  "Париж": "Париж",
+  "Тель Авив": "Тель Авив",
+  "Анкара": "Анкара",
+  "Лондон": "Лондон",
+  "Вашингтон": "Вашингтон"
 }
