[FEAT] Add templates pages

--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -3,6 +3,7 @@
   "Таблицы": "Sheets",
   "Лендинг": "Landing",
   "Профиль": "Profile",
+  "Шаблоны": "Templates",
   "Сменить тему": "Change theme",
   "Тема": "Theme",
   "Настройки": "Settings",
