--- a/public/locales/ru/home.json
+++ b/public/locales/ru/home.json
@@ -3,6 +3,7 @@
   "Таблицы": "Таблицы",
   "Лендинг": "Лендинг",
   "Профиль": "Профиль",
+  "Шаблоны": "Шаблоны",
   "Сменить тему": "Сменить тему",
   "Тема": "Тема",
   "Настройки": "Настройки",
