--- a/todo.txt
+++ b/todo.txt
@@ -5,5 +5,7 @@
 [] Тесты на LanguageSwitcher, ThemeSwitcher, NavigationMenu, NavigationMenuItem, LoginForm, RegisterForm
 [] Добавить SyncPromise в KVStorage, вместо Promise<T> -> Promise<T> | SyncPromise<T> + тесты
 [] Сделать снипеты для slice
+[] Использовать в Sheets entity adapter data и нормализацию
 [] Написать парсер для формул -> применить его в <Code />
 []? Всплывающие сообщения?
+[] Лого это entities?
