[FEAT] Add tags, request, test

--- a/todo.txt
+++ b/todo.txt
@@ -9,3 +9,5 @@
 [] Написать парсер для формул -> применить его в <Code />
 []? Всплывающие сообщения?
 [] Лого это entities?
+
+[] Проверить все сущности связанные с template, написать тесты
