--- a/todo.txt
+++ b/todo.txt
@@ -11,3 +11,5 @@
 [] Лого это entities?
 
 [] Проверить все сущности связанные с template, написать тесты
+[] Использовать Scroll в SheetsPage
+[] Использовать async iter чтобы смещаться на нужное количество ячеек и записывать в scroll 
