[FEAT] Add tabs and drag line components

--- a/todo.txt
+++ b/todo.txt
@@ -13,3 +13,4 @@
 [] Проверить все сущности связанные с template, написать тесты
 [] Использовать Scroll в SheetsPage
 [] Использовать async iter чтобы смещаться на нужное количество ячеек и записывать в scroll 
+[] Пофиксить тесты и сторибуки
