[FIX] Fix storybook

--- a/todo.txt
+++ b/todo.txt
@@ -12,6 +12,7 @@
 []? Всплывающие сообщения?
 [] Написать парсер для формул -> применить его в <Code />
 [] Использовать в Sheets entity adapter data и нормализацию
+[] Запросы и suspense для storybook 75
 
 // * Features
 [] Дописать KVStorage + тесты
