--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,10 @@
 // * Todo
-[] Пофиксить Title
 [] Доработать Fallbacks для image
 [] Завершить шаблоны
 [] RegisterForm? тесты?
 [] Тесты на Editable Profile
 [] Перенести enum в consts
+[] Storybook notifications
 
 // * Ideas
 [] Написать больше правил для ESLint 
@@ -16,6 +16,9 @@
 [] Запросы и suspense для storybook 75
 [] Проверить memo в компонентах
 
+[] Пофиксить Title
+[] Подумать Dropdown, Dropdown-item, modal, Drawer :(Больше UX) (useModal) (Сделать более универсальным) (Спрятать настройки анимаций?) (Сделать компоненты более  полиморфными) (79, 80, 81. 82)
+ 
 // * Features
 [] Дописать KVStorage + тесты
 [] Дописать KVStorageEngines (SS, IDBS) + тесты
