[FEAT] Add vite

--- a/todo.txt
+++ b/todo.txt
@@ -17,7 +17,7 @@
 [] Проверить memo в компонентах
 
 [] Пофиксить Title
-[] Подумать Dropdown, Dropdown-item, modal, Drawer :(Больше UX) (useModal) (Сделать более универсальным) (Спрятать настройки анимаций?) (Сделать компоненты более  полиморфными) (79, 80, 81. 82)
+[] Подумать Dropdown, Dropdown-item, modal, Drawer :(Больше UX) (useModal) (Сделать более универсальным) (Спрятать настройки анимаций?) (Сделать компоненты более  полиморфными) (79, 80, 81, 82, 84)
  
 // * Features
 [] Дописать KVStorage + тесты
