[FEAT] Upgrade my linter, update linter version

--- a/todo.txt
+++ b/todo.txt
@@ -2,6 +2,8 @@
 [] Завершить шаблоны
 [] RegisterForm? тесты?
 
+[] Fix storybook
+
 // * Ideas
 [] Написать больше правил для ESLint 
 [] Использовать async iter чтобы смещаться на нужное количество ячеек и записывать в scroll 
