[REACT] Profile thunks, slice

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,4 @@
 // * Todo
-[] Завершить шаблоны
 [] RegisterForm? тесты?
 
 [] Fix user init fetches and user data
@@ -7,6 +6,22 @@
 [] Fix ../../../../user architecture
 [] Docs 97 и документация для shared
 [] Fix Portal tests
+[] Закончить переводы
+[] Пофиксить портал
+[] Создать создание шаблонов опираясь на будущие таблицы
+[] Закончить с preprod 
+[] Проверить кобезу
+
+// *
+[] Пофиксить отображение шаблонов
+[] Админ панель?
+[] Поправить лоадеры
+[] Пофиксить стили тени и всплывающие списки шаблоны
+[] Проверить страницы и виджеты
+[] Проверить memo в компонентах
+[] Проверить ! FIX
+[] Разобраться с запросами пользователя и хранением Features в SS
+[] Хук useOnEventRefIter или как то так (Навешивание итератора on на ref)
 
 // * Ideas
 [] Написать больше правил для ESLint 
@@ -16,11 +31,8 @@
 [] Написать парсер для формул -> применить его в <Code />
 [] Использовать в Sheets entity adapter data и нормализацию
 [] Запросы и suspense для storybook 75
-[] Проверить memo в компонентах
- 
-// * Features
-[] Дописать KVStorage + тесты
-[] Хук useOnEventRefIter или как то так (Навешивание итератора on на ref)
-[] Дописать KVStorageEngines (SS, IDBS) + тесты
 [] Написать обертку для IDBS и часть функционала добавить в KVStorageEngines IDBS + тесты
-[] Допилить paths + тесты + поправить все пути в приложении
+
+// * LOL
+HomePage / Landing - Описание проекта с анимациями
+SheeetsPage - Страница с таблицами
