[REFACT] Layout, modal controller, auth modal

--- a/todo.txt
+++ b/todo.txt
@@ -23,6 +23,10 @@
 [] Разобраться с запросами пользователя и хранением Features в SS
 [] Хук useOnEventRefIter или как то так (Навешивание итератора on на ref)
 
+[] Проверка редеров
+[] Написание архитектуры
+[] Проверка мемо и корректрости написания
+
 // * Ideas
 [] Написать больше правил для ESLint 
 [] Использовать async iter чтобы смещаться на нужное количество ячеек и записывать в scroll 
