[FIX] Fix memo for components

--- a/todo.txt
+++ b/todo.txt
@@ -23,7 +23,7 @@
 [] Разобраться с запросами пользователя и хранением Features в SS
 [] Хук useOnEventRefIter или как то так (Навешивание итератора on на ref)
 
-[] Проверка редеров
+[] Проверка рендеров
 [] Написание архитектуры
 [] Проверка мемо и корректрости написания
 
