[FEAT] Add translates

--- a/public/locales/en/templates.json
+++ b/public/locales/en/templates.json
@@ -1,3 +1,30 @@
 {
-  
+  "Поиск": "Search",
+  "Сортировать по": "Sort by",
+  "Порядок сортировки": "Sort order",
+  "Изменить сортировку": "Change sorting",
+  "Изменить порядок сортировки": "Change sort order",
+  "Сменить вид на квадратики": "Change view to squares",
+  "Сменить вид на линии": "Change view to lines",
+  "title": "Title",
+  "views": "Views",
+  "createdAt": "Date of creation",
+  "asc": "Ascending",
+  "desc": "Descending",
+  "All_templates": "All templates",
+  "IT": "IT",
+  "Invest": "Investment",
+  "Since": "Since",
+  "Nature": "Nature",
+  "Business": "Business",
+  "Accounting": "Accounting",
+  "Expenses": "Expenses",
+  "Calculations": "Calculations",
+  "AI": "AI",
+  "JavaScript": "JavaScript",
+  "TypeScript": "TypeScript",
+  "Открыть в таблицах": "Open in sheets",
+  "Открыть шаблон в таблицах": "Open template in sheets",
+  "Подробнее": "More details",
+  "Открыть страницу подробного просмотра": "Open detail view page"
 }
