--- a/public/locales/ru/home.json
+++ b/public/locales/ru/home.json
@@ -1,9 +1,10 @@
 {
   "Домашняя страница": "Домашняя страница",
   "Таблицы": "Таблицы",
-  "Лендинг": "Лендинг",
   "Профиль": "Профиль",
   "Шаблоны": "Шаблоны",
+  "Создать шаблон": "Создать шаблон",
+  "Админ панель": "Создать шаблон",
   "Сменить тему": "Сменить тему",
   "Тема": "Тема",
   "Настройки": "Настройки",
@@ -15,7 +16,6 @@
   "Русский": "Русский",
   "Английский": "Английский",
   "Французский": "Французский",
-  "Пользователь": "Пользователь",
   "Меню": "Меню",
   "На главную": "На главную"
 }
