--- a/public/locales/ru/templates.json
+++ b/public/locales/ru/templates.json
@@ -1,3 +1,30 @@
 {
-  
+  "Поиск": "Поиск",
+  "Сортировать по": "Сортировать по",
+  "Порядок сортировки": "Порядок сортировки",
+  "Изменить сортировку": "Изменить сортировку",
+  "Изменить порядок сортировки": "Изменить порядок сортировки",
+  "Сменить вид на квадратики": "Сменить вид на квадратики",
+  "Сменить вид на линии": "Сменить вид на линии",
+  "title": "Заголовок",
+  "views": "Просмотры",
+  "createdAt": "Дата создания",
+  "asc": "По возрастанию",
+  "desc": "По убыванию",
+  "All_templates": "Все шаблоны",
+  "IT": "IT",
+  "Invest": "Инвестирование",
+  "Since": "Наука",
+  "Nature": "Природа",
+  "Business": "Бизнес",
+  "Accounting": "Бух. учет",
+  "Expenses": "Затраты",
+  "Calculations": "Расчеты",
+  "AI": "AI",
+  "JavaScript": "JavaScript",
+  "TypeScript": "TypeScript",
+  "Открыть в таблицах": "Открыть в таблицах",
+  "Открыть шаблон в таблицах": "Открыть шаблон в таблицах",
+  "Подробнее": "Подробнее",
+  "Открыть страницу подробного просмотра": "Открыть страницу подробного просмотра"
 }
