--- a/todo.txt
+++ b/todo.txt
@@ -23,9 +23,7 @@
 [] Разобраться с запросами пользователя и хранением Features в SS
 [] Хук useOnEventRefIter или как то так (Навешивание итератора on на ref)
 
-[] Проверка рендеров
-[] Написание архитектуры
-[] Проверка мемо и корректрости написания
+[] Проверка рендеров корректности написания
 
 // * Ideas
 [] Написать больше правил для ESLint 
