--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -1,9 +1,10 @@
 {
   "Домашняя страница": "Home",
   "Таблицы": "Sheets",
-  "Лендинг": "Landing",
   "Профиль": "Profile",
   "Шаблоны": "Templates",
+  "Создать шаблон": "Create template",
+  "Админ панель": "Admin panel",
   "Сменить тему": "Change theme",
   "Тема": "Theme",
   "Настройки": "Settings",
@@ -15,7 +16,6 @@
   "Русский": "Russian",
   "Английский": "English",
   "Французский": "French",
-  "Пользователь": "User",
   "Меню": "Menu",
   "На главную": "Go home"
 }
