--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,21 +1,11 @@
 {
-  "Загрузка": "Загрузка",
+  "Войти": "Войти",
+  "Загрузка": "Загрузка...",
   "Страница не найдена": "Страница не найдена",
   "Что-то сломалось!": "Что-то сломалось!",
   "Перезагрузить страницу": "Перезагрузить страницу",
-  "Вход в систему": "Вход в систему",
-  "Регистрация": "Регистрация",
-  "Войти": "Войти",
-  "Выйти": "Выйти",
-  "Почта": "Почта",
-  "Пароль": "Пароль",
-  "Повторите пароль": "Повторите пароль",
-  "Некорректная почта": "Некорректная почта",
-  "Пароли не совпадают": "Пароли не совпадают",
-  "Поле не может быть пустым": "Поле не может быть пустым",
-  "Имя должно быть больше 3 символов": "Имя должно быть больше 3 символов",
-  "Имя должно быть меньше 14 символов": "Имя должно быть меньше 14 символов",
-  "Пароль должен быть больше 8 символов": "Пароль должен быть больше 8 символов",
-  "Пароль должен быть меньше 12 символов": "Пароль должен быть меньше 12 символов",
-  "Неверная почта или пароль": "Неверная почта или пароль"
+  "Пользователь": "Пользователь",
+  "Админ панель": "Админ панель",
+  "Профиль": "Профиль",
+  "Выйти": "Выйти"
 }
