[FEAT] Add translates

--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -17,5 +17,6 @@
   "Английский": "English",
   "Французский": "French",
   "Меню": "Menu",
-  "На главную": "Go home"
+  "На главную": "Go home",
+  "Оповещения": "Alerts"
 }
