--- a/public/locales/ru/home.json
+++ b/public/locales/ru/home.json
@@ -17,5 +17,6 @@
   "Английский": "Английский",
   "Французский": "Французский",
   "Меню": "Меню",
-  "На главную": "На главную"
+  "На главную": "На главную",
+  "Оповещения": "Оповещения"
 }
