[FEAT] Add in developing features components structure

--- a/todo.txt
+++ b/todo.txt
@@ -14,16 +14,13 @@
 
 // *
 [] Пофиксить отображение шаблонов
-[] Админ панель?
-[] Поправить лоадеры
-[] Пофиксить стили тени и всплывающие списки шаблоны
-[] Проверить страницы и виджеты
-[] Проверить memo в компонентах
 [] Проверить ! FIX
-[] Разобраться с запросами пользователя и хранением Features в SS
 [] Хук useOnEventRefIter или как то так (Навешивание итератора on на ref)
 
 [] Проверка рендеров корректности написания
+[] Админ панель доделать
+[] Поправить страницу шаблонов
+[] Поправить инпуты 
 
 // * Ideas
 [] Написать больше правил для ESLint 
