[REFACT] Refactor input. add select component

--- a/public/locales/ru/home.json
+++ b/public/locales/ru/home.json
@@ -4,7 +4,7 @@
   "Профиль": "Профиль",
   "Шаблоны": "Шаблоны",
   "Создать шаблон": "Создать шаблон",
-  "Админ панель": "Создать шаблон",
+  "Админ панель": "Админ панель",
   "Сменить тему": "Сменить тему",
   "Тема": "Тема",
   "Настройки": "Настройки",
