--- a/todo.txt
+++ b/todo.txt
@@ -1,23 +1,16 @@
 // * Todo
 [] RegisterForm? тесты?
 
-[] Fix user init fetches and user data
-[] Fix storybook
-[] Fix ../../../../user architecture
-[] Docs 97 и документация для shared
-[] Создать создание шаблонов опираясь на будущие таблицы
+[] 97 Документация
 [] Закончить с preprod 
 [] Проверить кобезу
+[] Проверить ! FIX
 
 // *
-[] Пофиксить отображение шаблонов
-[] Проверить ! FIX
-[] Хук useOnEventRefIter или как то так (Навешивание итератора on на ref)
-
-[] Проверка рендеров корректности написания
-[] Админ панель доделать
-[] Поправить страницу шаблонов
 [] Поправить инпуты 
+[] Создать создание шаблонов опираясь на будущие таблицы
+[] Пофиксить отображение шаблонов
+[] Поправить страницу шаблонов
 
 // * Ideas
 [] Написать больше правил для ESLint 
