[REFACT] Input component

--- a/todo.txt
+++ b/todo.txt
@@ -12,6 +12,9 @@
 [] Пофиксить отображение шаблонов
 [] Поправить страницу шаблонов
 
+[] Select
+[] Date Piker
+ 
 // * Ideas
 [] Написать больше правил для ESLint 
 [] Использовать async iter чтобы смещаться на нужное количество ячеек и записывать в scroll 
