[TODO] Add todo

--- a/todo.txt
+++ b/todo.txt
@@ -10,6 +10,7 @@
 [] Поправить инпуты 
 [] Создать создание шаблонов опираясь на будущие таблицы
 [] Пофиксить отображение шаблонов
+[] Добавить ячейки менюшки (Страница Sheets)
 [] Поправить страницу шаблонов
 
 [] Select
