[FIX] Stories, tests

--- a/todo.txt
+++ b/todo.txt
@@ -7,14 +7,12 @@
 [] Проверить ! FIX
 
 // *
-[] Поправить инпуты 
 [] Создать создание шаблонов опираясь на будущие таблицы
 [] Пофиксить отображение шаблонов
 [] Добавить ячейки менюшки (Страница Sheets)
 [] Поправить страницу шаблонов
 
-[] Select
-[] Date Piker
+[] Date Piker, Color piker
  
 // * Ideas
 [] Написать больше правил для ESLint 
