[FEAT] Add architecture.drawio

--- a/todo.txt
+++ b/todo.txt
@@ -15,6 +15,11 @@
 [] Date Piker, Color piker
  
 // * Ideas
+// Написать оболочку над Matrix
+// Сделать заменяемые движки для движков KVStorage
+// Делать парсер как сервис с возможностью отправлять сообщения и получать ошибки
+// Сделать правильную структуру комбинаторов и async iter
+
 [] Написать больше правил для ESLint 
 [] Использовать async iter чтобы смещаться на нужное количество ячеек и записывать в scroll 
 [] Использовать Scroll в SheetsPage
