--- a/todo.txt
+++ b/todo.txt
@@ -19,6 +19,7 @@
 // Сделать заменяемые движки для движков KVStorage
 // Делать парсер как сервис с возможностью отправлять сообщения и получать ошибки
 // Сделать правильную структуру комбинаторов и async iter
+// Сделать превращение Emitter в поток
 
 [] Написать больше правил для ESLint 
 [] Использовать async iter чтобы смещаться на нужное количество ячеек и записывать в scroll 
